pegasus/src/Pegasus/Compiler/tests/invalidMOF/badQualifierDecl20.mof
// test qualifier with no scope definition. Scope is required parameter */
Qualifier noScope : string = null
    Flavor(DisableOverride, ToSubclass, Translatable);

